# 24aist

./: .env.example  .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt  run.sh  run_aist.py
Open-LLM-VTuber/: NOTICE-vendored.md  conf.korean.yaml
Open-LLM-VTuber/characters/: kr_별이.yaml
Open-LLM-VTuber/frontend/: README.md
aist/: __init__.py  chat_pipeline.py  cli.py  config.py  content.py  end_judge.py  llm.py  memory.py  obs_control.py  orchestrator.py  persona.py  report.py  scheduler.py  transcript.py  vtuber_bridge.py
aist/announce/: __init__.py  base.py  composer.py  discord_bot.py  naver_cafe.py
aist/chat/: __init__.py  base.py  chzzk.py  factory.py  kick.py  multi.py  soop.py  twitcasting.py  twitch.py  youtube.py
aist/game/: __init__.py  minecraft.py
config/: config.example.yaml  persona.example.yaml
deploy/: install.sh
deploy/systemd/: aist-minecraft.service  aist.service
docs/: INTEGRATION.md  OPERATOR.md  ROADMAP.md
game/minecraft/: README.md  bot.js  package.json
scripts/: fetch_frontend.sh  setup_openllm_vtuber.sh
tests/: test_announce.py  test_chat_pipeline.py  test_chat_platforms.py  test_config.py  test_end_judge.py  test_extras.py  test_human_likeness.py  test_memory.py  test_orchestrator.py  test_persona.py  test_plan_gaps.py  test_scheduler.py  test_transcript_report.py
windows/: EXE만들기.bat  build-exe.bat  core.bat  doctor.bat  install.bat  report.bat  run-all.bat  run.bat  test-broadcast.bat  리포트.bat  방송시작.bat  사용법.md  설치.bat  전체실행.bat  점검.bat  코어실행.bat  테스트방송.bat
(+1 files in other folders)
